[package]
name = "bottlerocket-extra-kit"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"

[package.metadata.build-kit]
vendor = "bottlerocket"

[lib]
path = "../kit.rs"

[build-dependencies]
curl = { path = "../../packages/curl" }
jsoncpp = { path = "../../packages/jsoncpp" }
oomd = { path = "../../packages/oomd"}
permissive-selinux = { path = "../../packages/permissive-selinux" }
sysstat = { path = "../../packages/sysstat" }
vim = { path = "../../packages/vim" }